simple-app-chart/templates/simple-app-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.service.type: nodeport
    kompose.version: 1.16.0
  creationTimestamp: null
  labels:
    io.kompose.service: ibm-simple-app
  name: ibm-simple-app
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: ibm-simple-app
    spec:
      containers:
      - image: noahheil/ibm-simple-app:latest
        name: ibm-simple-app
        ports:
        - containerPort: 80
        resources: {}
      restartPolicy: Always
