simple-app-chart/templates/simple-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.service.type: nodeport
    kompose.version: 1.16.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: ibm-simple-app
  name: ibm-simple-app
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    io.kompose.service: ibm-simple-app
  type: NodePort
status:
  loadBalancer: {}
