simple-app-chart/templates/simple-app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ibm-simple-app
spec:
  backend:
    serviceName: ibm-simple-app
    servicePort: 80
